--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -22,8 +22,8 @@ jobs:
           command: npm run test:ci
           config: baseUrl=http://localhost:8000
         env:
-          MVC_FIREBASE_DOMAIN: ${{ secrets.FIREBASE_TEST_DOMAIN }}
-          MVC_FIREBASE_API_KEY: ${{ secrets.FIREBASE_TEST_API_KEY }}
+          CYPRESS_DOMAIN: ${{ secrets.FIREBASE_TEST_DOMAIN }}
+          CYPRESS_API_KEY: ${{ secrets.FIREBASE_TEST_API_KEY }}
       - uses: actions/upload-artifact@v1
         if: failure()
         with:
