--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-source-filesystem": "^2.2.4",
     "gatsby-transformer-sharp": "^2.4.6",
     "i18next": "^19.4.4",
+    "i18next-http-backend": "^1.0.21",
     "node-sass": "^4.14.0",
     "prop-types": "^15.7.2",
     "random-words": "^1.1.1",
