--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+      with:
+        submodules: true
     - uses: actions/setup-node@master
       with:
         node-version: 10.x
